--- a/css/preview.css
+++ b/css/preview.css
@@ -96,27 +96,32 @@
 
 @media screen and (min-width: 768px) {
   .preview {
-    margin-top: 30px; }
+    padding-top: 40px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-size: auto 17px;
+    background-position: left bottom;
+    background-repeat: repeat-x; }
   .preview__wrap {
-    padding: 0;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     width: 668px;
-    height: auto;
-    margin: 0 auto; }
+    min-height: 530px;
+    height: 572px;
+    margin: 0 auto;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left; }
   .preview__title {
-    top: 0;
-    left: -5px;
     font-size: 43px;
     line-height: 50px;
     width: 100%;
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1; }
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    margin-bottom: 28px; }
   .week::after {
     display: inline-block;
     margin-left: 142px;
@@ -126,45 +131,44 @@
     top: 6px;
     line-height: 17px; }
   .preview__specs {
-    margin-top: 50px;
-    width: 334px;
+    width: 50%;
     -ms-flex-item-align: start;
         align-self: flex-start;
-    min-height: 243px;
+    min-height: 245px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-    padding-right: 43px; }
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    padding-left: 5px;
+    padding-right: 40px;
+    margin-bottom: 27px; }
   .preview__text {
     font-size: 17px;
     line-height: 30px;
     width: 291px;
     margin-bottom: auto; }
   .preview__spec {
-    width: 291px;
+    width: 100%;
     margin: 0 auto;
-    height: 37px; }
+    height: 36px; }
   .preview__spec_description {
     margin-left: 25px; }
   .preview__cart {
-    margin-top: 55px;
-    width: 334px;
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    height: auto;
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3; }
-  .preview__coast {
+    width: 50%;
     position: relative;
-    top: -145px;
-    width: 334px;
+    margin-left: -50%;
+    margin-top: 100px;
+    height: auto;
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
-            order: 4;
+            order: 4; }
+  .preview__coast {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    width: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -175,7 +179,7 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    min-height: 110px; }
+    min-height: 115px; }
   .preview__price {
     font-size: 20px;
     line-height: 24px;
@@ -183,24 +187,27 @@
     left: -25px;
     top: 3px; }
   .preview__order {
-    width: 290px;
-    margin: 0 auto;
-    position: relative;
-    left: -25px; }
+    width: 292px; }
   .preview__img {
     height: auto;
     width: auto; } }
 
 @media screen and (min-width: 1250px) {
   .preview {
-    width: 100%; }
+    padding-top: 33px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-size: auto 23px;
+    background-position: left bottom;
+    background-repeat: repeat-x; }
   .preview__wrap {
+    min-height: 757px;
     width: 1050px;
-    padding: 0;
-    margin: 0 auto; }
+    margin: 0 auto;
+    padding-right: 15px;
+    padding-top: 85px; }
   .preview__title {
-    top: 80px;
-    margin-left: 180px;
+    width: auto;
+    margin-left: 175px;
     font-size: 53px;
     line-height: 57px; }
   .week::after {
@@ -208,66 +215,24 @@
     width: 80px;
     text-align: center;
     position: absolute;
-    top: 6px;
+    top: 10px;
     left: -270px;
     line-height: 17px; }
   .preview__specs {
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    width: 525px;
-    padding: 0;
-    padding-left: 185px;
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2; }
-  .preview__text {
-    margin-top: 77px;
-    font-size: 17px;
-    line-height: 30px;
-    margin-bottom: 48px; }
-  .preview__spec {
+    width: 350px;
+    margin-left: 175px;
+    min-height: 258px;
+    margin-bottom: 105px; }
+  .preview__coast {
+    width: 350px;
     margin: 0;
-    margin-top: 5px; }
+    margin-left: 175px; }
+  .preview__spec {
+    height: 38.5px;
+    width: 100%; }
   .preview__cart {
     position: relative;
-    margin: 0;
-    width: 525px;
-    top: -33px;
-    left: 7px;
-    -ms-flex-item-align: start;
-        align-self: flex-start;
-    height: auto;
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3;
-    z-index: -1; }
-  .preview__coast {
-    position: relative;
-    top: 44px;
-    left: 90px;
-    width: 525px;
-    -webkit-box-ordinal-group: 5;
-        -ms-flex-order: 4;
-            order: 4;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    min-height: 117px; }
-  .preview__price {
-    font-size: 20px;
-    line-height: 24px;
-    position: relative;
-    left: -25px;
-    top: 3px; }
-  .preview__order {
-    width: 294px;
-    margin: 0 auto;
-    position: relative;
-    left: -23px; } }
+    width: 50%;
+    margin-left: -17%;
+    margin-top: -60px;
+    z-index: -1; } }
